# GIF-solana-Rust-

./: Anchor.toml
programs/mytestproject/: Cargo.toml
programs/mytestproject/src/: lib.rs
tests/: mytestproject.js
